--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/EditCaption.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/EditCaption.mxml
@@ -13,7 +13,8 @@
 		public var _checkCategoryLabel : Function;
 
 		static public function show( title : String, closeHandler : Function = null, checkCategoryLabel : Function = null ) : EditCaption {
-			if ( !_dialog || _dialog.closed ) {
+			if ( !_dialog || _dialog.closed ) 
+			{
 				_dialog = new EditCaption();
 				_dialog._checkCategoryLabel = checkCategoryLabel;
 				_dialog.title = title;
@@ -32,20 +33,25 @@
 			txtCaption.setFocus();
 		}
 
-		static public function closeDialog() : void {
+		static public function set correctCategory(correct : Boolean) : void
+		{
 			if ( !_dialog || _dialog.closed )
 				return;
-
-			_dialog.close();
+			
+			if (correct)
+			{
+				_dialog.closeDetail = ModalDialog.OK;
+				_dialog.close();
+			}
+			else
+			{
+				_dialog.closeDetail = ModalDialog.CANCEL;
+				_dialog.showDialogLabelError();
+			}
+			
+			
 		}
-
-		static public function showCategoryLabelError() : void {
-			if ( !_dialog || _dialog.closed )
-				return;
-
-			_dialog.showDialogLabelError();
-		}
-
+			
 		public function showDialogLabelError() : void {
 			txtCaption.errorString = LanguageManager.sentences['msg_enter_unique_category_label'];
 		}
@@ -57,16 +63,21 @@
 					if ( _checkCategoryLabel != null )
 						_checkCategoryLabel( _dialog.txtCaption.text );
 					else
+					{
+						_dialog.closeDetail = ModalDialog.OK;
 						_dialog.close();
+					}
 					break;
 				}
 				case BUTTON_NAME_CANCEL:
 				{
+					_dialog.closeDetail = ModalDialog.CANCEL;
 					_dialog.close();
 					break;
 				}
 				default:
 				{
+					_dialog.closeDetail = ModalDialog.CANCEL;
 					_dialog.close();
 					break;
 				}
