bugfix: sort graphs after rename
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7507 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/graphsClasses/AccordionChild.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/graphsClasses/AccordionChild.mxml
@@ -136,6 +136,8 @@
 			destroyListItemEditor();
 
 			lstGraphs.dataProvider.notifyItemUpdate( editedItemRenderer );
+			
+			onGraphsChange(null);
 
 			var evnt : GraphsAccordionEvent = new GraphsAccordionEvent( GraphsAccordionEvent.GRAPH_VALUE_EDITING_COMPLETE );
 			lstGraphs.dispatchEvent( evnt );
