--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -40,33 +40,34 @@
 
 	<mx:Script>
 		<![CDATA[
-		import mx.binding.utils.*;
-		import mx.collections.ArrayCollection;
-		import mx.collections.Sort;
-		import mx.collections.SortField;
-		import mx.containers.ViewStack;
-		import mx.controls.ComboBox;
-		import mx.controls.List;
-		import mx.events.CollectionEvent;
-		import mx.events.CollectionEventKind;
-		import mx.events.DropdownEvent;
-		import mx.events.FlexEvent;
-		import mx.events.IndexChangedEvent;
-		import mx.events.ListEvent;
-		import mx.managers.DragManager;
-		import mx.utils.NameUtil;
-		import mx.utils.ObjectProxy;
-
-		import net.vdombox.powerpack.graph.GraphCanvas;
-		import net.vdombox.powerpack.graph.GraphCanvasEvent;
-		import net.vdombox.powerpack.graph.Node;
-		import net.vdombox.powerpack.lib.extendedapi.containers.SuperAlert;
-		import net.vdombox.powerpack.lib.extendedapi.utils.ObjectUtils;
-		import net.vdombox.powerpack.managers.ContextManager;
-		import net.vdombox.powerpack.managers.LanguageManager;
-		import net.vdombox.powerpack.managers.ProgressManager;
-		import net.vdombox.powerpack.panel.graphsClasses.AccordionChild;
-		import net.vdombox.powerpack.panel.graphsClasses.GraphsAccordionEvent;
+			import mx.binding.utils.*;
+			import mx.collections.ArrayCollection;
+			import mx.collections.Sort;
+			import mx.collections.SortField;
+			import mx.containers.ViewStack;
+			import mx.controls.Alert;
+			import mx.controls.ComboBox;
+			import mx.controls.List;
+			import mx.events.CollectionEvent;
+			import mx.events.CollectionEventKind;
+			import mx.events.DropdownEvent;
+			import mx.events.FlexEvent;
+			import mx.events.IndexChangedEvent;
+			import mx.events.ListEvent;
+			import mx.managers.DragManager;
+			import mx.utils.NameUtil;
+			import mx.utils.ObjectProxy;
+			
+			import net.vdombox.powerpack.graph.GraphCanvas;
+			import net.vdombox.powerpack.graph.GraphCanvasEvent;
+			import net.vdombox.powerpack.graph.Node;
+			import net.vdombox.powerpack.lib.extendedapi.containers.SuperAlert;
+			import net.vdombox.powerpack.lib.extendedapi.utils.ObjectUtils;
+			import net.vdombox.powerpack.managers.ContextManager;
+			import net.vdombox.powerpack.managers.LanguageManager;
+			import net.vdombox.powerpack.managers.ProgressManager;
+			import net.vdombox.powerpack.panel.graphsClasses.AccordionChild;
+			import net.vdombox.powerpack.panel.graphsClasses.GraphsAccordionEvent;
 
 		static private var defaultCaptions : Object = {
 			none : "none",
@@ -218,6 +219,7 @@
 			initGraphs.addItem( graph );
 
 			graph.addEventListener( GraphCanvasEvent.GRAPH_CHANGED, onGraphChange );
+			graph.addEventListener( GraphCanvasEvent.JUMP_TO_GRAPH, onJumpToGraph );
 
 			var graphAccordionChild : AccordionChild = null;
 
@@ -493,7 +495,10 @@
 		{
 			var graph : GraphCanvas = getGraphByName( name );
 			if ( !graph )
+			{
+				SuperAlert.show( LanguageManager.sentences['msg_no_graph_by_name'], LanguageManager.sentences['error'] ); 
 				return null;
+			}
 
 			selectGraph( graph );
 
@@ -654,7 +659,15 @@
 			event.stopImmediatePropagation();
 			dispatchEvent( new Event( TPL_CHANGED ) );
 		}
-
+			
+		private function onJumpToGraph(event : GraphCanvasEvent) : void
+		{
+			if (!event.graphToJumpName)
+				return;
+			
+			showGraphByName(event.graphToJumpName);
+		}
+			
 		private function btnNewClickHandler( event : MouseEvent ) : void
 		{
 			var child : AccordionChild = AccordionChild( graphsAccordion.selectedChild );
@@ -775,6 +788,9 @@
 			initGraphs.removeItemAt( initGraphs.getItemIndex( curGraph ) );
 			curTab.graphs.removeItemAt( curTab.lstGraphs.selectedIndex );
 			GraphCanvas( curGraph ).dispose();
+			
+			GraphCanvas( curGraph ).removeEventListener( GraphCanvasEvent.GRAPH_CHANGED, onGraphChange );
+			GraphCanvas( curGraph ).removeEventListener( GraphCanvasEvent.JUMP_TO_GRAPH, onJumpToGraph );
 
 			if ( curTab.graphs.length > 0 )
 			{
