git-svn-id: http://svn.vdombox.ru/flextools/trunk@7511 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Generator.mxml
+++ b/PowerPack/v.01/PowerPack/src/Generator.mxml
@@ -246,13 +246,7 @@
 			
 			function getLogo() : *
 			{
-				if (template.b64picture)
-					return template.b64picture;
-				
-				if (xml.picture[0])
-					return Utils.getStringOrDefault( xml.picture[0], '' );
-				
-				return null;
+				return xml.picture[0] && Utils.getStringOrDefault( xml.picture[0], '' ) || null;
 			}
 		}
 
